--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,29 @@
 
     <string name="home_user_complaints_title">Your complaints</string>
 
-    <string name="unknown_error_occurred">An error has occured</string>
+    <string name="unknown_error_occurred">An error has occurred</string>
+
+    <string name="action_upload_document">Upload a document</string>
+
+    <string name="label_document_name">Name</string>
+    <string name="label_document_shared">Share document with others</string>
+
+    <string name="action_select_file">Choose a file</string>
+    <string name="action_select_tags">Select tags</string>
+    <string name="action_send_upload_form">Upload</string>
+    <string name="action_send_edit_form">Edit</string>
+
+    <string name="label_tags_popup_close">Close</string>
+
+    <string name="label_chosen_file"><b>Chosen file:</b> %s</string>
+
+    <string name="error_document_name_empty_edittext">Name is required</string>
+    <string name="error_document_file_empty">A file is required</string>
+    <string name="error_wrong_field_value">Please verify your input</string>
+
+    <string name="label_uploading_form">Uploading…</string>
+    <string name="label_editing_form">Editing…</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="alerts_title_placeholder">Alerts</string>
@@ -49,5 +71,41 @@
     <string name="published_alerts">Published Alerts</string>
     <string name="empty_list">There is no alerts yet</string>
 
+    <string name="label_documents_menu_sort_fields">Sort by</string>
+    <string name="label_documents_menu_sort_order">Order</string>
+    <string name="label_documents_menu_sort_name">Name</string>
+    <string name="label_documents_menu_sort_upload">Upload time</string>
+    <string name="label_documents_menu_sort_shared">Shared</string>
+    <string name="label_documents_menu_sort_asc">Ascending</string>
+    <string name="label_documents_menu_sort_desc">Descending</string>
+
+    <string name="document_item_name_placeholder">Résumé Java</string>
+    <string name="document_item_date_placeholder">Yesterday</string>
+    <string name="document_item_tags_placeholder">1ère année • PFA</string>
+
+    <string name="document_item_options_menu_description">Document options</string>
+
+    <string name="label_document_item_context_menu_download">Download</string>
+    <string name="label_document_item_context_menu_edit">Edit</string>
+    <string name="label_document_item_context_menu_delete">Delete</string>
+
+    <string name="time_calculation_yesterday">Yesterday</string>
+
+    <plurals name="time_calculation_hours">
+        <item quantity="one">%d hour ago</item>
+        <item quantity="other">%d hours ago</item>
+    </plurals>
+
+    <plurals name="time_calculation_minutes">
+        <item quantity="one">%d minute ago</item>
+        <item quantity="other">%d minutes ago</item>
+    </plurals>
+
+    <plurals name="time_calculation_weeks">
+        <item quantity="one">%d week ago</item>
+        <item quantity="other">%d weeks ago</item>
+    </plurals>
+
+    <string name="time_calculation_few_moments">A few moments ago</string>
 
 </resources>
