feat: big improvements to scanned pages ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,6 @@
 
     <string name="error_document_scanner_pdf_result">Could not load scanned document pdf</string>
 
+    <string name="label_document_scanner_page_delete">Delete</string>
+
 </resources>
