--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,9 @@
     <string name="home_user_complaints_title">Your complaints</string>
 
     <string name="unknown_error_occurred">An error has occured</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="alerts_title_placeholder">Alerts</string>
 
 
 </resources>
