--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,6 +173,10 @@
     <string name="document_tag_delete_action_description">Delete tag</string>
     <string name="document_tag_edit_action_description">Edit tag</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="alerts_title_placeholder">Alerts</string>
+
     <string name="label_document_tags_add">Add tag</string>
 
     <string name="label_document_tags_add_dialog_title">Add a new tag</string>
