feat: adding the second fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,7 +178,7 @@
     <string name="alerts_title_placeholder">Alerts</string>
     <string name="my_alerts">My alerts</string>
     <string name="published_alerts">Published Alerts</string>
-    <string name="empty_list">There is no alerts yet</string>
+    <!--<string name="empty_list">There is no alerts yet</string> -->
 
     <string name="label_document_tags_add">Add tag</string>
 
