feat: implemented edit and add complaints logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="complaints_title">Complaints</string>
     <string name="all_complaints_title">All Complaints</string>
     <string name="user_complaints_title">My Complaints</string>
-    <string name="select_type_complaint">Select type</string>
+    <string name="select_type_complaint">Select complaint type</string>
     <string name="type_complaints_all">All</string>
     <string name="type_complaints_all_building">Building</string>
     <string name="type_complaints_all_room">Room</string>
@@ -180,8 +180,8 @@
     <string name="view_complaint_details">View complaints details</string>
     <string name="add_edit_complaint">Add or edit a complaint</string>
     <string name="success_complaint_deletion">The complaint has been deleted</string>
-    <string name="loading_complaint_deletion">Deleting complaint...</string>
-    <string name="error_complaint_deletion">An error has occured while deleting the complaint!</string>
+    <string name="loading_complaint_deletion">Deleting complaint…</string>
+    <string name="error_complaint_deletion">An error has occurred while deleting the complaint!</string>
     <string name="complainant_name">John WICK</string>
     <string name="complaint_date_icon_description">Icon for the complaint date</string>
     <string name="complaint_date">01/01/2020</string>
@@ -208,5 +208,38 @@
     <string name="facility_complaint">Facility complaint</string>
     <string name="complaint_not_editable">You can\'t edit the complaint if it\'s already assigned to someone. You can still delete your complaint if you think it is not necessary anymore. And you can also make another complaint !</string>
     <string name="label_ok">OK</string>
+    <string name="complaint_details_title">Complaint details</string>
+    <string name="complaint_editor_title">Complaint editor</string>
+    <string name="complaint_type_prompt">Select complaint type</string>
+    <string name="complaint_type_edit_text">Complaint type</string>
+    <string name="prompt_room_number">Room number (B41, A20, …)</string>
+    <string name="prompt_room_problem">Room problem</string>
+    <string name="prompt_building_name">Building (A, B, C, …)</string>
+    <string name="prompt_building_problem">Building problem</string>
+    <string name="prompt_facility_type">Facility type</string>
+    <string name="prompt_classroom_name">Classroom (Amphi 1 …)</string>
+    <string name="prompt_complaint_description">Description</string>
+    <string name="complaint_icon">Icon for the complaint editor title (Add or edit a complaint)</string>
+    <string name="complaint_type_icon_description">Icon for the complaint type</string>
+    <string name="complaint_status_icon_description">Icon for the complaint status</string>
+    <string name="complaint_handler_icon_description">Icon for the complaint handler</string>
+    <string name="complaint_spec_prob_icon_description">Icon for problem specification of the complaint</string>
+    <string name="submit_complaint">Submit complaint</string>
+    <string name="complaint_created">Complaint %s successfully</string>
+    <string name="complaint_type_required">The complaint type is required</string>
+    <string name="complaint_description_required">The complaint description is required</string>
+    <string name="building_problem_required">Building problem is required</string>
+    <string name="building_required">The concerned building is required</string>
+    <string name="room_problem_required">Room problem is required</string>
+    <string name="room_required">The room number is required</string>
+    <string name="facility_type_required">Facility type is required</string>
+    <string name="classroom_name_required">The classrom is required when the facility type is CLASS</string>
+    <string name="complaint_form_invalid">Complaint form is invalid</string>
+    <string name="building_complaint_type_dto">building</string>
+    <string name="facilities_complaint_type_dto">facility</string>
+    <string name="room_complaint_type_dto">room</string>
+    <string name="edit_complaint">Update Complaint</string>
+    <string name="submitting_complaint">Submitting complaint …</string>
+    <string name="updating_complaint">Updating complaint …</string>
 
 </resources>
