feat: added ability to change user privilege

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,6 +224,8 @@
     <string name="user_details_tab_place_suggestions_title">Places</string>
     <string name="user_details_tab_place_suggestions_descriptions">Places suggested by user</string>
 
+    <string name="user_details_menu_edit_privileges">Change privilege</string>
+    
     <string name="user_role_student">Student</string>
     <string name="user_role_moderator">Moderator</string>
     <string name="user_role_adei">ADEI</string>
