refactor: adding some features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,5 +237,21 @@
     <string name="user_details_tab_documents_description">User shared documents</string>
     <string name="user_details_tab_place_suggestions_title">Places</string>
     <string name="user_details_tab_place_suggestions_descriptions">Places suggested by user</string>
+    <string name="alert_add_title">Add Alert</string>
+    <string name="alert_editor_title">title</string>
+    <string name="alert_editor_type">type</string>
+    <string name="label_alert_editor_area_change_button">Select zone</string>
+    <string name="alert_zone_editor_confirm_add_button">Add</string>
+    <string name="alert_edit_title">Edit Alert</string>
+    <string name="alert_zone_editor_edit_button">Edit</string>
+    <string name="confirm_alerts">Confirm Alerts</string>
+    <string name="label_alert_editor_area_pharmacy_radio_button">PHARMACY</string>
+    <string name="label_alert_editor_area_thieves_radio_button">THIEVES</string>
+    <string name="label_alert_editor_area_library_radio_button">LIBRARY</string>
+    <string name="label_school_zone_editor_address">Type</string>
+    <string name="alert_add_title_type">Type</string>
+    <string name="error_zone_result">could not load the location</string>
+    <string name="error_type_result">Select the type</string>
+    <string name="error_zone_alert_result">the zone had not been selected</string>
 
 </resources>
